refactor: Use `Streams.toList()` instead of `Collectors.toList()` here.
Streams has a built-in `.toList()` method which returns a UnmodifiableList instead.